--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,19 +11,19 @@
         android:id="@+id/tvTopLabel"
         android:layout_width="204dp"
         android:layout_height="28dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="124dp"
+        android:text="Morse code"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Morse code" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvCodePreview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="64dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvTopLabel" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTopLabel" />
 
     <SeekBar
         android:id="@+id/seekBarDuration"
@@ -61,7 +61,7 @@
         android:layout_width="95dp"
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
         android:text="Repeat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDuration"
@@ -82,7 +82,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:text="Input text here"
+        android:layout_marginBottom="8dp"
+        android:text="Text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toTopOf="@+id/textInputBox"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -111,5 +113,27 @@
         app:layout_constraintTop_toTopOf="@+id/textInputBox"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@android:drawable/ic_media_play" />
+
+    <ImageView
+        android:id="@+id/ivFlashLight"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/flashlight_off" />
+
+    <ImageButton
+        android:id="@+id/sosButton"
+        android:layout_width="128dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:background="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarDuration"
+        app:srcCompat="@drawable/sos_icon" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
