--- a/app/src/main/res/layout/fragment_send_message.xml
+++ b/app/src/main/res/layout/fragment_send_message.xml
@@ -103,6 +103,7 @@
         android:layout_height="56dp"
         android:layout_marginEnd="24dp"
         android:background="#F44336"
+        android:contentDescription="play Button"
         app:layout_constraintBottom_toBottomOf="@+id/textInputBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textInputBox"
@@ -114,6 +115,7 @@
         android:layout_height="128dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
+        android:contentDescription="Flashlight Image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/flashlight_off" />
@@ -125,6 +127,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@null"
+        android:contentDescription="SOS Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDurationLength"
         app:srcCompat="@drawable/sos_icon" />
